--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test:ui": "vitest --ui",
     "clean": "rimraf dist",
     "prebuild": "npm run clean",
-    "postbuild": "npm run test"
+    "postbuild": "npm run test",
+    "update-deps": "npx update-browserslist-db@latest"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
@@ -58,7 +59,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "cpf-cnpj-validator": "^1.0.3",
-    "date-fns": "^3.6.0",
+    "date-fns": "^2.30.0",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^10.16.4",
     "input-otp": "^1.2.4",
@@ -99,12 +100,12 @@
     "jsdom": "^26.0.0",
     "lovable-tagger": "^1.1.7",
     "postcss": "^8.4.47",
+    "rimraf": "^5.0.5",
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.0.9",
-    "rimraf": "^5.0.5"
+    "vitest": "^3.0.9"
   }
 }
