--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
+    "update-browserslist-db": "^1.1.3",
     "vite": "^5.4.1",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.0.9"
