--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.8.2",
     "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@supabase/supabase-js": "^2.39.3",
@@ -43,6 +43,7 @@
     "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
+    "@vitejs/plugin-react": "^4.3.4",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "@vitest/coverage-v8": "^1.2.0",
     "@vitest/ui": "^1.2.0",
