--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "postcss": "^8.4.33",
     "rimraf": "^5.0.5",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
     "vite-tsconfig-paths": "^4.2.3",
