--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@radix-ui/react-toast": "^1.2.6",
     "@supabase/supabase-js": "^2.39.3",
     "axios": "^1.6.5",
+    "class-variance-authority": "^0.7.1",
     "date-fns": "^3.2.0",
     "framer-motion": "^10.18.0",
     "jwt-decode": "^4.0.0",
