--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@emotion/styled": "^11.11.0",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-toast": "^1.2.6",
     "@supabase/supabase-js": "^2.39.3",
     "axios": "^1.6.5",
@@ -36,6 +37,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.2",
     "sonner": "^2.0.2",
+    "tailwind-merge": "^3.1.0",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
