--- a/package.json
+++ b/package.json
@@ -22,10 +22,26 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^5.0.0",
+    "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-progress": "^1.1.2",
+    "@radix-ui/react-radio-group": "^1.2.3",
+    "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slider": "^1.2.3",
+    "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@supabase/supabase-js": "^2.39.3",
     "axios": "^1.6.5",
     "class-variance-authority": "^0.7.1",
@@ -34,7 +50,9 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.309.0",
     "react": "^18.2.0",
+    "react-day-picker": "^9.6.4",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.55.0",
     "react-router-dom": "^6.21.2",
     "sonner": "^2.0.2",
     "tailwind-merge": "^3.1.0",
