--- a/.env.production
+++ b/.env.production
@@ -4,7 +4,7 @@
 VITE_APP_BASE_URL=https://secure-bridge-connect.vercel.app
 
 # Configurações da API
-VITE_API_URL=https://api.sistemasclaudio.com.br
+VITE_API_URL=https://sua-api.vercel.app
 VITE_API_TIMEOUT=30000
 VITE_API_TOKEN=your-api-token
 
@@ -13,4 +13,10 @@ VITE_ENABLE_DEBUG=false
 
 # Configurações do Supabase
 VITE_SUPABASE_URL=https://your-project.supabase.co
-VITE_SUPABASE_ANON_KEY=your-anon-key 
+VITE_SUPABASE_ANON_KEY=your-anon-key
+
+# Configurações adicionais
+VITE_APP_ENV=production
+VITE_PUBLIC_URL=https://seu-app.vercel.app
+VITE_ENABLE_LOGS=false
+VITE_ENABLE_ANALYTICS=true 
