--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "build:dev": "tsc && vite build --mode development",
     "build:prod": "tsc && vite build --mode production",
     "preview": "vite preview",
-    "lint": "eslint .",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --fix",
     "test": "vitest",
     "test:watch": "vitest watch",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
-    "clean": "rimraf dist"
+    "clean": "rimraf dist",
+    "deploy:vercel": "vercel --prod"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
