--- a/.env.production
+++ b/.env.production
@@ -1,22 +1,16 @@
 # Configurações do Ambiente de Produção
 
 # URL base da aplicação
-VITE_APP_BASE_URL=https://secure-bridge-connect.vercel.app
+VITE_APP_BASE_URL=https://coneteclaudio-br23f094u-alexdeveloper25.vercel.app
 
 # Configurações da API
-VITE_API_URL=https://sua-api.vercel.app
+VITE_API_URL=https://api.sistemasclaudio.com.br
 VITE_API_TIMEOUT=30000
-VITE_API_TOKEN=your-api-token
 
 # Desativar logs de debug
 VITE_ENABLE_DEBUG=false
 
-# Configurações do Supabase
-VITE_SUPABASE_URL=https://your-project.supabase.co
-VITE_SUPABASE_ANON_KEY=your-anon-key
-
 # Configurações adicionais
 VITE_APP_ENV=production
-VITE_PUBLIC_URL=https://seu-app.vercel.app
 VITE_ENABLE_LOGS=false
 VITE_ENABLE_ANALYTICS=true 
