--- a/.env.production
+++ b/.env.production
@@ -1,10 +1,10 @@
 # Configurações do Ambiente de Produção
 
 # URL base da aplicação
-VITE_APP_BASE_URL=https://coneteclaudio-br23f094u-alexdeveloper25.vercel.app
+VITE_APP_BASE_URL=https://sistemasclaudiofigueiredo.com.br
 
 # Configurações da API
-VITE_API_URL=https://api.sistemasclaudio.com.br
+VITE_API_URL=https://api.sistemasclaudiofigueiredo.com.br
 VITE_API_TIMEOUT=30000
 
 # Desativar logs de debug
