--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "rimraf": "^5.0.5",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
+    "terser": "^5.39.0",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
     "vite-tsconfig-paths": "^4.2.3",
