--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:prod": "tsc && vite build --mode production",
     "preview": "vite preview",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "lint:fix": "eslint . --fix",
+    "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "test": "vitest",
     "test:watch": "vitest watch",
     "test:coverage": "vitest run --coverage",
@@ -58,7 +58,9 @@
     "sonner": "^2.0.2",
     "tailwind-merge": "^3.1.0",
     "zod": "^3.22.4",
-    "zustand": "^4.4.7"
+    "zustand": "^4.4.7",
+    "@radix-ui/react-slot": "^1.0.2",
+    "clsx": "^2.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.2.0",
@@ -87,6 +89,7 @@
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
     "vite-tsconfig-paths": "^4.2.3",
-    "vitest": "^1.2.0"
+    "vitest": "^1.2.0",
+    "prettier": "^3.0.3"
   }
 }
