--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slider": "^1.2.3",
+    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
@@ -46,6 +47,7 @@
     "@supabase/supabase-js": "^2.39.3",
     "axios": "^1.6.5",
     "class-variance-authority": "^0.7.1",
+    "clsx": "^2.0.0",
     "date-fns": "^3.2.0",
     "framer-motion": "^10.18.0",
     "jwt-decode": "^4.0.0",
@@ -58,9 +60,7 @@
     "sonner": "^2.0.2",
     "tailwind-merge": "^3.1.0",
     "zod": "^3.22.4",
-    "zustand": "^4.4.7",
-    "@radix-ui/react-slot": "^1.0.2",
-    "clsx": "^2.0.0"
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.2.0",
@@ -82,14 +82,15 @@
     "jsdom": "^23.2.0",
     "lovable-tagger": "^1.0.0",
     "postcss": "^8.4.33",
+    "prettier": "^3.0.3",
     "rimraf": "^5.0.5",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "terser": "^5.39.0",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
+    "vite-plugin-compression": "^0.5.1",
     "vite-tsconfig-paths": "^4.2.3",
-    "vitest": "^1.2.0",
-    "prettier": "^3.0.3"
+    "vitest": "^1.2.0"
   }
 }
