--- a/package.json
+++ b/package.json
@@ -6,17 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "build:dev": "tsc && vite build --mode development",
-    "build:prod": "tsc && vite build --mode production",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "format": "prettier --write \"src/**/*.{ts,tsx}\"",
-    "test": "vitest",
-    "test:watch": "vitest watch",
-    "test:coverage": "vitest run --coverage",
-    "test:ui": "vitest --ui",
-    "clean": "rimraf dist",
-    "deploy:vercel": "vercel --prod"
+    "vercel-build": "npm run build"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
@@ -42,23 +34,23 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
-    "@radix-ui/react-toast": "^1.2.6",
+    "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@supabase/supabase-js": "^2.39.3",
     "axios": "^1.6.5",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.0.0",
-    "date-fns": "^3.2.0",
-    "framer-motion": "^10.18.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
+    "framer-motion": "^11.0.3",
     "jwt-decode": "^4.0.0",
-    "lucide-react": "^0.309.0",
+    "lucide-react": "^0.323.0",
     "react": "^18.2.0",
     "react-day-picker": "^9.6.4",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.55.0",
-    "react-router-dom": "^6.21.2",
-    "sonner": "^2.0.2",
-    "tailwind-merge": "^3.1.0",
+    "react-router-dom": "^6.22.0",
+    "sonner": "^1.4.0",
+    "tailwind-merge": "^2.2.1",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
@@ -66,11 +58,11 @@
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
-    "@types/node": "^20.11.0",
-    "@types/react": "^18.2.47",
-    "@types/react-dom": "^18.2.18",
-    "@typescript-eslint/eslint-plugin": "^6.18.1",
-    "@typescript-eslint/parser": "^6.18.1",
+    "@types/node": "^20.11.17",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "@vitest/coverage-v8": "^1.2.0",
@@ -81,14 +73,14 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "jsdom": "^23.2.0",
     "lovable-tagger": "^1.0.0",
-    "postcss": "^8.4.33",
+    "postcss": "^8.4.35",
     "prettier": "^3.0.3",
     "rimraf": "^5.0.5",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "terser": "^5.39.0",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.11",
+    "typescript": "^5.2.2",
+    "vite": "^5.1.0",
     "vite-plugin-compression": "^0.5.1",
     "vite-tsconfig-paths": "^4.2.3",
     "vitest": "^1.2.0"
